--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
-    "punycode": "^2.3.1"
+    "punycode": "^2.3.1",
+    "yarn": "^1.22.21"
   }
 }
